created main base of the page
not much to explain

--- a/StonesMain.html
+++ b/StonesMain.html
@@ -1,15 +1,86 @@
 <!DOCTYPE html>
+
 <head>
     <title>Stones</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="StonesMain.css" />
+    <link rel="icon"
+        href="https://user-images.githubusercontent.com/102315203/233388884-d9880a06-b084-4fed-b02a-3d7966bf3aec.png" />
 </head>
+
 <body>
     <header>
-    
+        <div class="header-img">
+            <img src="https://user-images.githubusercontent.com/102315203/233388884-d9880a06-b084-4fed-b02a-3d7966bf3aec.png" alt="logo" style="width:125px;height:125px;">
+        </div>
+        <div class="header-text">
+            stones throwing association
+        </div>
     </header>
-    <h1>
-        
-    </h1>
+
+    <nav class="navbar">
+        <a href="#Home" class="nav-home">Home</a>
+        <a href="#Rules">Rules</a>
+        <a href="#Events">Events</a>
+        <a href="#Gallery">Gallery</a>
+        <a href="https://shop.stonesthrowing.com/" class="nav-right">Shop</a>
+    </nav>
+
+    <main>
+        <section class ="content">
+            <div class="earth">
+                <div class="earth-txt">
+                    <h1>The earth is your course</h1>
+                    <p> The sky is the limit here. Stones courses have been developed on beaches of soft sand and crushed shells,
+                    within forests covered in pine needles, twigs, and branches, in mowed meadows, and on all soil consistencies.
+                    Level surfaces are frowned upon. The more slopes, hills, and jagged cliffs the better.</p>
+                </div>
+            </div>
+            <div class = "stones-sizes">
+                <h1>Your stones selection</h1>
+                <div class="sizes-grid">
+                    <div class = "grid-90mm" class = "border-box">
+                        <h1>90mm</h1>
+                        <img src="https://user-images.githubusercontent.com/102315203/234848694-78d46593-ce54-4544-87de-fd6de1e42aee.JPG" alt="90 size">
+                        <p>
+                            Best used to get into tight spaces, carry less momentum on slopes
+                            or just to be a smaller target for the opponent to hit
+                        </p>
+                    </div>
+                    <div class = "grid-100mm" class = "border-box">
+                        <h1>100mm</h1>
+                        <img src="https://user-images.githubusercontent.com/102315203/234848694-78d46593-ce54-4544-87de-fd6de1e42aee.JPG" alt="100 size">
+                        <p>
+                            There are 2 of these versatile stones per set. Use them to establish,
+                            score, block, knockout or assist another stone.
+                        </p>
+                    </div>
+                    <div class = "grid-110mm" class = "border-box">
+                        <h1>110mm</h1>
+                        <img src="https://user-images.githubusercontent.com/102315203/235009349-38791d45-a2f7-4a5f-baae-42b0ce1dd7a5.JPG" alt="110 size">
+                        <p>
+                            The largest of the set is best used to knock your opponent, or 
+                            the mark out of play. It can also be a great establish in the right situation.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class = "media">
+                <div class="video">
+                    <iframe class="stones-video" frameborder="0" allowfullscreen="1" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" title="This is Stones." width=820" height="462" 
+                    src="https://www.youtube.com/embed/ESWhcSg7xQY?controls=1&amp;rel=0&amp;playsinline=0&amp;modestbranding=0&amp;autoplay=0&amp;enablejsapi=1&amp;origin=https%3A%2F%2Fstonesthrowing.com&amp;widgetid=1" id="widget2">
+                    </iframe>
+                </div>
+                <div class="media-links">
+                    <div class ="insta">
+                        <a href="https://www.instagram.com/stones_sta/">
+                        <img src="" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
